--- a/jmndao/package.json
+++ b/jmndao/package.json
@@ -9,7 +9,9 @@
     "antd": "^4.16.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-text-loop": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
