--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
     "name": "portfolio",
+    "type": "module",
     "version": "1.0.0",
     "description": "My Portfolio is the ultimate solution",
     "main": "backend/server.js",
     "scripts": {
         "setup": "npm install && npm update",
-        "start": "node backend/server.js"
+        "start": "node backend/server.js",
+        "server": "nodemon backend/server",
+        "client": "npm start --prefix frontend",
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "data:import": "node backend/seeder",
+        "data:destroy": "node backend/seeder -d"
     },
     "keywords": [
         "express",
@@ -15,17 +21,19 @@
     ],
     "license": "MIT",
     "dependencies": {
-        "cookie-parser": "^1.4.4",
-        "cors": "^2.8.5",
+        "bcryptjs": "^2.4.3",
+        "colors": "^1.4.0",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-async-handler": "^1.1.4",
         "helmet": "^3.21.2",
-        "express-custom-error": "^1.8.4",
         "http-status": "^1.3.2",
-        "has-keys": "^0.1.0",
-        "morgan": "^1.9.1",
-        "rotating-file-stream": "^1.4.6",
-        "mandatoryenv": "^1.1.1",
-        "module-alias": "^2.2.2",
-        "mongodb": "^3.3.3",
-        "express": "^4.17.1"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.13.4",
+        "morgan": "^1.9.1"
+    },
+    "devDependencies": {
+        "concurrently": "^6.2.0",
+        "nodemon": "^2.0.12"
     }
 }
