--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,16 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "antd": "^4.16.8",
+        "axios": "^0.21.1",
         "react": "^17.0.2",
         "react-awesome-reveal": "^3.8.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "react-text-loop": "^2.3.0",
+        "redux": "^4.1.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-thunk": "^2.3.0",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
