--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "http-status": "^1.3.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.13.4",
-        "morgan": "^1.9.1"
+        "morgan": "^1.9.1",
+        "react-redux": "^7.2.4"
     },
     "devDependencies": {
         "concurrently": "^6.2.0",
