--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
         "@testing-library/user-event": "^12.8.3",
         "antd": "^4.16.8",
         "axios": "^0.21.1",
+        "file-saver": "^2.0.5",
         "react": "^17.0.2",
+        "react-ace-builds": "^7.3.6",
         "react-awesome-reveal": "^3.8.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
