--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
         "dotenv": "^10.0.0",
+        "dropbox": "^10.5.0",
         "express": "^4.17.1",
         "express-async-handler": "^1.1.4",
         "helmet": "^3.21.2",
@@ -31,6 +32,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.13.4",
         "morgan": "^1.9.1",
+        "node-downloader-helper": "^1.0.18",
         "react-redux": "^7.2.4"
     },
     "devDependencies": {
