--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "dropbox": "^10.5.0",
         "file-saver": "^2.0.5",
         "firebase": "^8.9.1",
+        "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-ace-builds": "^7.3.6",
         "react-awesome-reveal": "^3.8.1",
