--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "react-scroll-parallax": "^2.4.0",
         "react-text-loop": "^2.3.0",
         "redux": "^4.1.0",
         "redux-devtools-extension": "^2.13.9",
