--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
+        "@u-wave/react-vimeo": "^0.9.5",
         "antd": "^4.16.8",
         "axios": "^0.21.1",
         "dropbox": "^10.5.0",
