--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "description": "My Portfolio is the ultimate solution",
     "main": "backend/server.js",
     "engines": {
-        "node": "14.16.x"
+        "node": "14.16.x",
+        "npm": "6.14.x"
     },
     "scripts": {
         "setup": "npm install && npm update",
